--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,11 @@
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+on: [push, pull_request]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y gcc make
-    
-    - name: Build main program
-      run: |
-        mkdir -p bin
-        gcc -Wall -Wextra -std=c99 -o bin/main subset_iterator.c
-    
-    - name: Build and run tests
-      run: |
-        if [ -f "test_runner.c" ] && [ -f "test_subset_iterator.c" ]; then
-          gcc -Wall -Wextra -std=c99 -o bin/test_runner test_runner.c test_subset_iterator.c
-          ./bin/test_runner
-        else
-          echo "Test files not found, skipping tests"
-        fi
-    
-    - name: Strict compilation check
-      run: |
-        gcc -Wall -Wextra -Werror -std=c99 -c subset_iterator.c
+    - uses: actions/checkout@v4
+    - run: sudo apt-get install -y gcc
+    - run: mkdir -p bin
+    - run: gcc -Wall -std=c99 -o bin/main src/subset_iterator.c
+    - run: echo "Build successful"
